--- a/github-readme-generator-ai/package.json
+++ b/github-readme-generator-ai/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
