--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask
-Flask-SocketIO
-google-generativeai
-Flask-CORS
+gunicorn
+flask
+flask_socketio
+flask_cors
 requests
-gevent==23.9.1
-gevent-websocket==0.10.1
-gunicorn==21.2.0
+google-generativeai
+gevent
+gevent-websocket
