--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,22 @@
 {
-    "name": "readme-generator",
-    "version": "1.0.0",
-    "description": "README Generator using various AI models",
-    "main": "app.js",
-    "scripts": {
-      "start": "node app.js"
-    },
-    "dependencies": {
-      "express": "^4.17.1",
-      "socket.io": "^4.4.1",
-      "cors": "^2.8.5",
-      "axios": "^0.24.0",
-      "@google/generative-ai": "^0.1.0",
-      "nodemailer": "^6.7.2"
-    },
-    "engines": {
-      "node": ">=14.0.0"
-    }
+  "name": "readme-generator",
+  "version": "1.0.0",
+  "description": "README Generator using various AI models",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "socket.io": "^4.4.1",
+    "cors": "^2.8.5",
+    "axios": "^0.24.0",
+    "@google/generative-ai": "^0.1.0",
+    "nodemailer": "^6.7.2",
+    "dotenv": "^16.0.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
-  
-  
+}
+
