--- a/backend/package.json
+++ b/backend/package.json
@@ -7,16 +7,16 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "socket.io": "^4.4.1",
-    "cors": "^2.8.5",
-    "axios": "^0.24.0",
     "@google/generative-ai": "^0.1.0",
+    "axios": "^0.24.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.1",
+    "geoip-lite": "^1.4.10",
     "nodemailer": "^6.7.2",
-    "dotenv": "^16.0.0"
+    "socket.io": "^4.4.1"
   },
   "engines": {
     "node": ">=14.0.0"
   }
 }
-
