--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,12 @@
     "@google/generative-ai": "^0.1.0",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "geoip-lite": "^1.4.10",
-    "nodemailer": "^6.7.2",
-    "socket.io": "^4.4.1"
+    "mongoose": "^8.9.5",
+    "nodemailer": "^6.9.16",
+    "socket.io": "^4.8.1"
   },
   "engines": {
     "node": ">=14.0.0"
